Enable running all tests

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest": "^23.6.0"
   },
   "scripts": {
-    "test": "jest --watch day18.js"
+    "test": "jest --watch day18.js",
+    "testAll": "jest ."
   }
 }
