--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ansi-escapes": "^4.1.0",
     "cli-color": "^1.4.0",
     "clikey": "^1.0.2",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "ramda-extension": "^0.7.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
